force-app/main/default/objects/CalloutKey__mdt/CalloutKey__mdt.object-meta.xml
<CustomObject>
    <label>CalloutKey</label>
    <pluralLabel>CalloutKeys</pluralLabel>
</CustomObject>