force-app/main/default/objects/CalloutKey__mdt/fields/Custom_Field_1__c.field-meta.xml
<CustomField>
    <fullName>Custom_Field_1__c</fullName>
    <description>This is to help map data between sandbox and production for different systems.</description>
    <label>Custom Field 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>