force-app/main/default/objects/CalloutKey__mdt/fields/url__c.field-meta.xml
<CustomField>
    <fullName>url__c</fullName>
    <description>This is url callout. This can be changed here so we can toggle between different urls required for testing.</description>
    <label>url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>